# Engine

./: .gitignore  CMakeLists.txt  README.md
Assets/: Rock.blend  Telescope.blend
Assets/Shaders/Cube/: fragment.glsl
Engine/: App.cpp  App.h  CMakeLists.txt  Scene.cpp  Scene.h  config.h
Engine/App/: CMakeLists.txt
Engine/App/App/: App.cpp  App.h  main.cpp
Engine/Config/: config.h
Engine/Core/: CMakeLists.txt
Engine/Core/Core/: Core.cpp  Core.h  Scene.cpp  Scene.h
Engine/Core/Core/Camera/: Camera.cpp  Camera.h
Engine/Core/Core/DataSerializer/: DataSerializer.cpp  DataSerializer.h  GlobResourceSerialization.cpp  GlobResourceSerialization.h  LightsSerialization.cpp  LightsSerialization.h  MaterialsSerialization.cpp  MaterialsSerialization.h  MeshSerialization.cpp  MeshSerialization.h  ObjectsSerialization.cpp  ObjectsSerialization.h  ScriptSerialization.cpp  ScriptSerialization.h  ShaderSerialization.cpp  ShaderSerialization.h  TextureSerialization.cpp  TextureSerialization.h
Engine/Core/Core/Objects/: GameObject.cpp  GameObject.h  Object.h  ObjectManager.cpp  ObjectManager.h
Engine/Core/Core/Resources/: Resources.cpp  Resources.h
Engine/Core/Core/Resources/Lights/: Lights.cpp  Lights.h
Engine/Core/Core/Resources/Materials/: Materials.cpp  Materials.h
Engine/Core/Core/ScriptController/: ScriptController.cpp  ScriptController.h
Engine/DataSerializer/: DataSerializer.cpp  DataSerializer.h  LightsSerialization.cpp  ObjectsSerialization.cpp  ObjectsSerialization.h  ShaderSerialization.cpp  ShaderSerialization.h  TextureSerialization.h
Engine/Editor/: CMakeLists.txt
Engine/Editor/Editor/: Editor.cpp  Editor.h
Engine/Editor/Editor/UI/: Settings.h  UI.cpp  UI.h  UI_AssetLoader.cpp  UI_AssetLoader.h  UI_Info.cpp  UI_Info.h  UI_Lights.cpp  UI_Lights.h  UI_Log.h  UI_Logs.cpp  UI_Materials.cpp  UI_Materials.h  UI_Objects.cpp  UI_Objects.h  UI_ScriptEditor.cpp  UI_ScriptEditor.h  UI_Scripts.cpp  UI_Scripts.h  UI_ShaderEditors.cpp  UI_ShaderEditors.h  UI_Shaders.cpp  UI_Shaders.h
Engine/Editor/UI/: UI.h  UI_Objects.cpp
Engine/Objects/: GameObject.cpp  GameObject.h  ObjectManager.cpp  ObjectManager.h
Engine/Resources/: Resources.cpp  Resources.h
Engine/ScriptController/: ScriptController.cpp  ScriptController.h
Engine/ScriptShared/: GameObjectData.h  GlobResource.h  IObjectManger.h
Engine/ScriptShared/ScriptShared/: GameObjectData.h  GameObjectScriptInterface.h  GlobResource.h  ILogger.h  IObjectManger.h  ScriptRegister.h
Engine/UI/: Settings.h  UI.cpp  UI_Objects.cpp
Engine/Utils/: CMakeLists.txt  utils.h
Engine/Utils/Utils/: Logger.cpp  Logger.h  config.h  utils.h
Engine/Utils/Utils/Resource/: Resource.h  Resource.hpp  ResourceController.h  ResourceController.hpp
Examples/GameData/: Materials.pbr
Examples/Mountain/GameData/: Materials.pbr  Resources.res
Examples/Mountain/GameData/Assets/Shaders/PostProcessing/: fragment.glsl
Examples/Mountain/GameData/Assets/Shaders/Skybox/: vertex.glsl
Examples/Mountain/GameData/Assets/Shaders/Terrain/: fragment.glsl  tess_evaluation.glsl  vertex.glsl
Examples/Mountain/GameData/Assets/Shaders/Water/: fragment.glsl  vertex.glsl
Examples/Mountain/Scripts/: AnimateWater.cpp  FishMovement.cpp  RandomGen.cpp  Template.cpp
Examples/Moutains/GameData/: Materials.pbr
Examples/Moutains/GameData/Assets/Meshes/: Road.msh
Examples/Moutains/Scripts/: RandomGen.cpp
Examples/Moutains/Scripts/ScriptShared/ScriptShared/: GameObjectData.h  GlobResource.h  InputData.h
Examples/Scripts/: FishMovement.cpp  Template.cpp
Examples/UnderTheWater/GameData/: Lights.lit  Materials.pbr  Resources.res
Examples/UnderTheWater/GameData/Assets/Shaders/Skybox/: fragment.glsl
Examples/UnderTheWater/Scripts/: AnimateWater.cpp  RandomGen.cpp  Window.cpp
Examples/UnderTheWater/Scripts/ScriptShared/ScriptShared/: GameObjectScriptInterface.h
GameData/: Lights.lit  Materials.pbr  Resources.res
GameData/Assets/Shaders/Default/: fragment.glsl
GameData/Assets/Shaders/SDF/: fragment.glsl
GameData/Assets/Shaders/Terrain/: fragment.glsl
ScriptShared/ScriptShared/: GameObjectData.h  GlobResource.h  IObjectManger.h
Scripts/: FishMovement.cpp  GameObjectScriptInterface.h  RandomGen.cpp  Template.cpp  Test.cpp
UnderTheWater/: App.cpp  App.h  CMakeLists.txt  DataSerializer.cpp  DataSerializer.h  Logger.cpp  Logger.h  Meduse.h  SDF.cpp  SDF.h  Scene.cpp  Scene.h  UI.cpp  UI.h  config.h  main.cpp
UnderTheWater/Camera/: Camera.cpp  Camera.h
UnderTheWater/DataSerializer/: DataSerializer.cpp  DataSerializer.h  LightsSerialization.cpp  LightsSerialization.h  MeshSerialization.cpp  MeshSerialization.h  ObjectsSerialization.cpp  ScriptSerialization.cpp  ScriptSerialization.h  ShaderSerialization.cpp  ShaderSerialization.h
UnderTheWater/Objects/: GameObject.cpp  GameObject.h  Object.h  ObjectManager.cpp  ObjectManager.h
UnderTheWater/Objects/Meduse/: Meduse.cpp  Meduse.h
UnderTheWater/Objects/Skybox/: Skybox.cpp  Skybox.h
UnderTheWater/Objects/Terrain/: Terrain.cpp  Terrain.h
UnderTheWater/Objects/Water/: Water.cpp  Water.h
UnderTheWater/Resources/: Resources.cpp  Resources.h
UnderTheWater/Resources/Materials/: Materials.cpp  Materials.h
UnderTheWater/Resources/Meshes/: Meshes.cpp  Meshes.h
UnderTheWater/Resources/Shaders/: Cube.h  Shaders.cpp  Shaders.h
UnderTheWater/ScriptController/: ScriptController.cpp  ScriptController.h
UnderTheWater/ScriptShared/: GameObjectData.h  GameObjectScriptInterface.h  ScriptRegister.h
UnderTheWater/UI/: Settings.h  UI.cpp  UI.h  UI_AssetLoader.cpp  UI_Info.cpp  UI_Lights.cpp  UI_Materials.h  UI_Objects.cpp  UI_ScriptEditor.cpp  UI_ScriptEditor.h  UI_Scripts.cpp  UI_ShaderEditors.cpp  UI_ShaderEditors.h  UI_Shaders.cpp
UnderTheWater/Utils/: Logger.cpp  Logger.h  utils.h
